@@ -1,3 +1,8 @@
+1998-06-16  Marcus G. Daniels  <mgd@ute.santafe.edu>
+
+	* Makefile.am: autoconf-substitute values for gs, cjpeg, pngtopnm,
+	and eps.
+
 1998-06-15  Marcus G. Daniels  <mgd@ute.santafe.edu>
 
 	* Makefile.am (EXTRA_DIST): Enumerate the PNG and EPS files.
